# blobby-server

./: .gitignore  Cargo.toml  README.md  dockerfile  run.sh
res/: landingpage.html
scripts/: connectLogs.sh  dockerBuild.sh  startDocker.sh
src/: env.rs  error.rs  main.rs  server.rs
src/clients/: gpt.rs  mod.rs
