[package]
name = "blobby-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
mime = "0.3.17"
serde = "1.0.164"
tokio = { version = "1.29.1", features = ["full"] }
